# gas-price-tracker

./: .dockerignore  .infisical.json  .pre-commit-config.yaml  .rumdl.toml  .sqlfluff  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  mise.toml  pyproject.toml
.claude/commands/opsx/: apply.md  archive.md  explore.md  propose.md
.claude/skills/openspec-apply-change/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.cursor/commands/: opsx-apply.md  opsx-archive.md  opsx-explore.md  opsx-propose.md
.cursor/skills/openspec-archive-change/: SKILL.md
.cursor/skills/openspec-explore/: SKILL.md
api/: auth.py  config.py  database.py  main.py  schemas.py
dagster_pipeline/: codegen_assets.py  dagster.yaml  dbt_assets.py  definitions.py  extraction_assets.py  ingestion_assets.py  resources.py  schedules.py  workspace.yaml
dbt/: .user.yml  README.md  dbt_project.yml  profiles.yml
dbt/models/mart/: price_records.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_extraction_results.sql
dbt/seeds/: psgc_boundaries.csv  schema.yml
extraction/: gemini_client.py  ocr_extractor.py  pdf_detector.py  pipeline.py  text_extractor.py
ingestion/: downloader.py  http_client.py  robots.py  scraper.py
openspec/changes/initialize-project/: design.md  proposal.md  tasks.md
openspec/changes/initialize-project/specs/doe-ingestion/: spec.md
storage/: models.py  queries.py  status.py
tests/: conftest.py  test_api.py  test_extraction.py  test_ingestion.py  test_pipeline_integration.py
(+3 files in other folders)
